@@ -13,6 +13,7 @@ export(makeBoxplot)
 export(replaceWrongValues)
 import(BiocParallel)
 import(Matrix)
+import(Rcpp)
 import(Rdpack)
 import(data.table)
 import(futile.logger)
@@ -26,3 +27,4 @@ importFrom(stats,median)
 importFrom(stats,p.adjust)
 importFrom(stats,rnorm)
 importFrom(utils,write.table)
+useDynLib(BEclear)
