@@ -1,0 +1,8 @@
+# Generated by using Rcpp::compileAttributes() -> do not edit by hand
+# Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+
+#' @import Rcpp
+localLoss <- function(L, R, is, js, error_matrix) {
+    .Call('_BEclear_localLoss', PACKAGE = 'BEclear', L, R, is, js, error_matrix)
+}
+
