@@ -1,15 +1,0 @@
-% Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/localLoss.R
-\name{localLoss}
-\alias{localLoss}
-\title{localLoss}
-\usage{
-localLoss(L, R, is, js, error_matrix)
-}
-\value{
-a list containing two matrices containing the local loss
-}
-\description{
-Calculates the local loss
-}
-\keyword{internal}
